--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -1601,7 +1601,7 @@ tbody.commit-list {
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 44px;
+  gap: 8px;
 }
 
 #diff-file-tree {
